2008-11-16  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* README: Added note about django-evolution.
	* settings_sample.py: Added django-evolution settings and move
	  MANAGERS nearer to ADMINS.
	* stats/admin.py:
	* stats/management/commands/copy-release.py:
	* stats/management/commands/copy-release:
	* stats/models.py: Fixed freezed -> frozen.
	* templates/module.html: Renamed category.category into
	  category.name and stringfrozen into string_frozen	
	* vertimus/models.py: Adjustments.
	* vertimus/workflow_state.py: Fix tests.
	* vertimus/templates: Deleted.

2008-11-14  Claude Paroz  <claude@2xlibre.net>

	* languages/models.py: Provide summary stats for default categ. Corrected
	link for svn_path.
	* languages/views.py:
	* templates/teams/team_detail.html: Don't try to translate the language
	locale (only if human-readable name).

2008-11-14  Claude Paroz  <claude@2xlibre.net>

	* languages/views.py: Add current date in tar.gz filename.
	* urls.py: Permit @ in locale in url.

2008-11-14  Claude Paroz  <claude@2xlibre.net>

	* languages/views.py:
	* stats/views.py:
	* teams/views.py: Use get_object_or_404 shortcut for retrieving objects.
	* stats/models.py: Get rid of warning messages from msgcat. Improve
	iteration algorithm with islice.

2008-11-14  Claude Paroz  <claude@2xlibre.net>

	* templates/404.html: Add a 404 template.

2008-11-13  Claude Paroz  <claude@2xlibre.net>

	* languages/urls.py:
	* languages/views.py: Restore previous damned-lies XML functionality for
	parsing with external apps like Vertimus.

2008-11-13  Claude Paroz  <claude@2xlibre.net>

	* stats/models.py: New module.get_description, potbase name changed for
	help pot files (eog-head.HEAD.fr.po instead of help.HEAD.fr.po). Various
	small improvements.
	* templates/module.html:
	* stats/views.py: Replace translated_name by a method call.

2008-11-12  Claude Paroz  <claude@2xlibre.net>

	* languages/views.py: Distinguish between ui and doc in the tar filename.
