@@ -27,6 +27,10 @@ Requirements
     Run './manage.py syncdb' before any model changes and './manage.py
     evolve --hint --execute' after.
 
+3 - [Optional] Django Debug Toolbar
+    git clone git://github.com/dcramer/django-debug-toolbar.git
+    Define USE_DEBUG_TOOLBAR to True in settings.py to use it.
+
 Installation
 ============
 
