@@ -1,5 +1,10 @@
 2008-11-16  Stéphane Raimbault  <stephane.raimbault@gmail.com>
 
+	* README: Notes to install django-debug-toolbar.
+	* settings_sample.py: Added django-debug-toolbar settings.
+
+2008-11-16  Stéphane Raimbault  <stephane.raimbault@gmail.com>
+
 	* README: Added note about django-evolution.
 	* settings_sample.py: Added django-evolution settings and move
 	  MANAGERS nearer to ADMINS.
